Fixing SVTYPE=CNV for DRAGEN CNV (#74)
Closes: #74
Related-Issue: #74
Projected-Results-Impact: none